KULRICE-4172: attempting to fix permgen errors/timeouts